--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,6 +2,10 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-image: url('../images/hero-bg.svg');
+    background-position: top 20px right 20px;
+    background-repeat: no-repeat;
+    background-size: 35%;
 }
 
 header {
@@ -16,7 +20,7 @@ nav {
     align-items: center;
     background-color: #fff;
     padding: 20px 20px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .logo {
@@ -79,7 +83,167 @@ nav {
     color: #6a4df5 !important;
 }
 
-/* Hero section */
+/*hero section*/
+.hero-section {
+    padding: 10px;
+    margin: 0px 150px;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(3, 200px);
+    gap: 10px;
+}
+
+.grid-container .header-text {
+    grid-column: 1 / span 6;
+    grid-row: 1 / span 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 0px;
+}
+
+.grid-container .header-text h1 {
+    font-size: 50px;
+    font-weight: bold;
+    color: #333;
+    position: relative;
+    margin: 0;
+}
+
+.grid-container .header-text p {
+    font-size: 32px;
+    color: #333;
+    font-weight: bold;
+    margin-bottom: 10px;
+    position: relative;
+    margin: 0;
+}
+
+.grid-container .header-text h1 .highlighted {
+    color: red;
+    position: relative;
+    font-weight: bold;
+    border-radius: 20px;
+    padding: 0 10px;
+}
+
+.grid-container .header-text h1 .highlighted::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0px;
+    height: 20px;
+    width: 100%;
+    background-color: #66e3c4;
+    border-radius: 20px;
+    z-index: -1;
+}
+
+.grid-container .text,
+.grid-container .button,
+.grid-container .image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.grid-container .text {
+    padding: 20px;
+}
+
+.grid-container .button button {
+    padding: 20px 30px;
+    background-color: #6a5acd;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    font-size: 32px;
+}
+
+.grid-container .button button:hover {
+    background-color: #5a3cdf;
+}
+
+.grid-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+#div1 {
+    grid-column: 1 / span 2;
+    grid-row: 2 / span 1;
+    align-items: flex-start;
+}
+
+#div2 {
+    grid-column: 1 / span 2;
+    grid-row: 3 / span 1;
+}
+
+#div3 {
+    grid-column: 1 / span 2;
+    grid-row: 4 / span 1;
+}
+
+#div4 {
+    grid-column: 3 / span 2;
+    grid-row: 2 / span 2;
+}
+
+#div5 {
+    grid-column: 3 / span 1;
+    grid-row: 4 / span 1;
+}
+
+#div6 {
+    grid-column: 5 / span 1;
+    grid-row: 3 / span 1;
+}
+
+#div7 {
+    grid-column: 5 / span 1;
+    grid-row: 4 / span 1;
+}
+
+#div8 {
+    grid-column: 6 / span 1;
+    grid-row: 3 / span 1;
+}
+
+#div9 {
+    grid-column: 6 / span 1;
+    grid-row: 4 / span 1;
+}
+
+#div10 {
+    grid-column: 5 / span 2;
+    grid-row: 2 / span 1;
+    align-items: flex-end;
+}
+
+.hero-section h1 {
+    font-size: 36px;
+    color: #333;
+}
+
+.hero-section p {
+    font-size: 18px;
+    color: #666;
+}
+
+.hero-section .highlight {
+    color: #ff6347;
+}
 
 /*info section*/
 .info-section {
@@ -200,9 +364,10 @@ nav {
     bottom: -2px;
     height: 4px;
     width: 100%;
-    background-color: rgba(255, 165, 0, 0.3); 
+    background-color: rgba(255, 165, 0, 0.3);
     border-radius: 2px;
 }
+
 .gray {
     color: #bbb;
 }
@@ -218,7 +383,7 @@ nav {
     border-radius: 8px;
     padding: 20px;
     width: 220px;
-    margin: 10px 5px; 
+    margin: 10px 5px;
     text-align: left;
     position: relative;
 }
@@ -273,14 +438,14 @@ nav {
 .pricing-card ul li {
     font-size: 14px;
     color: #666;
-    margin: 5px 0; 
+    margin: 5px 0;
     display: flex;
     align-items: center;
 }
 
 .pricing-card ul li img {
     margin-right: 10px;
-    width: 30px; 
+    width: 30px;
     height: 30px;
 }
 
@@ -399,9 +564,9 @@ nav {
 
 .contact-form {
     display: grid;
-    grid-template-columns: 1fr 1fr auto; 
+    grid-template-columns: 1fr 1fr auto;
     grid-gap: 10px;
-    align-items: start; 
+    align-items: start;
 }
 
 .contact-form .input-group {
@@ -431,10 +596,10 @@ nav {
 
 .contact-form .input-group textarea {
     width: 100%;
-    height: 80px; 
+    height: 80px;
     resize: none;
-    overflow-y: auto; 
-    padding-right: 35px; 
+    overflow-y: auto;
+    padding-right: 35px;
     border-radius: 5px;
     background-color: #bbb;
     border: 1px solid #ddd;
@@ -443,19 +608,19 @@ nav {
 
 .contact-form .input-icon {
     position: absolute;
-    top: 10px; 
+    top: 10px;
     right: 10px;
     color: #666;
-    pointer-events: none; 
+    pointer-events: none;
 }
 
 .contact-form .message-group {
     display: flex;
     align-items: center;
-    grid-column: 1 / span 2; 
+    grid-column: 1 / span 2;
     position: relative;
-    justify-content: space-between; 
-    gap: 10px; 
+    justify-content: space-between;
+    gap: 10px;
 }
 
 .contact-form .send-button {
@@ -466,7 +631,7 @@ nav {
     border-radius: 10px;
     cursor: pointer;
     font-weight: bold;
-    height: 80px; 
+    height: 80px;
     align-self: flex-start;
 }
 
@@ -481,47 +646,14 @@ nav {
 .footer-wave {
     background: url('../images/footer-wave.svg') no-repeat bottom center;
     background-size: cover;
-    height: 140px; 
+    height: 140px;
     position: relative;
     width: 100%;
-    margin-top: -100px; 
+    margin-top: -100px;
 }
 
 /*Mobile*/
 @media (max-width: 800px) {
-    .footer-grid {
-        display: none;
-    }
-
-    .footer-responsive {
-        display: block;
-        text-align: center;
-        padding: 20px;
-        margin-bottom: 40px; 
-    }
-
-    .footer-responsive .email {
-        color: #6a4df5;
-        font-weight: bold;
-        font-size: 18px;
-    }
-
-    .footer-responsive p {
-        margin: 15px 0; 
-    }
-
-    .footer-responsive .bold {
-        font-weight: bold;
-    }
-
-    .footer-responsive .light-green {
-        color: #32CD32;
-    }
-
-    .footer-responsive .social-icons img {
-        margin: 0 10px;
-    }
-
     .logo-img {
         display: none;
     }
@@ -539,7 +671,7 @@ nav {
         left: 0;
         width: 100%;
         background-color: #fff;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
 
     .nav-links li {
@@ -565,21 +697,52 @@ nav {
         max-width: 300px;
     }
 
+    .hero-section {
+        padding: 10px;
+        margin: 0px auto;
+    }
+
+    .grid-container .button button {
+        padding: 20px 30px;
+        background-color: #6a5acd;
+        color: white;
+        border: none;
+        border-radius: auto;
+        cursor: pointer;
+        font-size: auto;
+    }
+
     .footer-grid {
-        grid-template-columns: 1fr;
-        gap: 10px;
+        display: none;
     }
 
-    .contact-form {
-        grid-template-columns: 1fr;
+    .footer-responsive {
+        display: block;
+        text-align: center;
+        padding: 20px;
+        margin-bottom: 40px;
     }
 
-    .contact-form .message-group {
-        flex-direction: column;
+    .footer-responsive .email {
+        color: #6a4df5;
+        font-weight: bold;
+        font-size: 18px;
     }
 
-    .contact-form button {
-        margin-top: 10px;
-        margin-left: 0;
+    .footer-responsive p {
+        margin: 15px 0;
     }
+
+    .footer-responsive .bold {
+        font-weight: bold;
+    }
+
+    .footer-responsive .light-green {
+        color: #32CD32;
+    }
+
+    .footer-responsive .social-icons img {
+        margin: 0 10px;
+    }
+
 }
